--- a/css/main.css
+++ b/css/main.css
@@ -33,25 +33,25 @@ body {
 
 /* MENU ITEMS */
 .menu-items {
-    font-family: Playball;
-    font-size: 20px;    
+    font-family: Patua One;
+    font-weight: 100;
+    font-size: 15px; 
     position: absolute;
-    top: 30px;
+    top: 32px;
     right: 55px;
     z-index: 3;
     visibility: hidden;
     padding-right: 10px;
+    transform: translate3d(0,-300%,0);
+    transition-duration: .5s;
 }
 
 .menu-items a {
     text-decoration: none;
     color: #fff;
-    padding-right: 10px;
+    padding-right: 20px;
 }
 
-#event-btn, #photos-btn {
-    position: relative;
-}
 
 /* MENU OVERLAY */
 .menu {
@@ -165,16 +165,4 @@ main:after {
     font-family: Playball;
     font-size: 18px;
     font-weight: 100;
-}
-
-/* ANIMATION */
-
-@keyframes fromRight {
-    from {right: -100px;}
-    to {right: 0px;}  
-}
-
-@keyframes toRight {
-    from {right: 0px;}
-    to {right: -100px;}    
 }
