--- a/css/main.css
+++ b/css/main.css
@@ -52,6 +52,10 @@ body {
     padding-right: 20px;
 }
 
+.menu-items a:hover {
+    color: var(--secondary-color);
+    transition: all .2s ease-in;
+}
 
 /* MENU OVERLAY */
 .menu {
