--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,8 @@
 :root {
     --primary-color: #FFF;
     --secondary-color: #FF487C;
+    --terciary-color: pink;
+
 }
 
 * {
@@ -130,7 +132,7 @@ main {
     line-height: 1;
     z-index: 0;
     padding: 60px;
-    background: pink;
+    background: var(--terciary-color);
 }
 
 main:after {
@@ -170,4 +172,13 @@ main:after {
     font-family: Playball;
     font-size: 18px;
     font-weight: 100;
+}
+
+/* FOOTER */
+footer {
+    font-size: 12px;
+    color: #ccc;
+    position: absolute;
+    bottom: 5px;
+    right: 10px;
 }
