--- a/css/rsvp.css
+++ b/css/rsvp.css
@@ -2,7 +2,6 @@ body {
     background-image: url(../img/background2.jpeg);
     background-position: top;
     background-size: cover;
-/*    opacity: 0.8;*/
 }
 
 .form {
@@ -15,4 +14,5 @@ body {
 
 iframe {
     opacity: 0.85;
+    height: 85vh;
 }
