--- a/css/faq.css
+++ b/css/faq.css
@@ -17,12 +17,30 @@ body {
 }
 
 .form {
+    position: relative;
     height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+/*
+    animation-name: comeIn;
+    animation-duration: 0.6s;
+*/
 }
+
+/*
+@keyframes comeIn{
+    0% {
+        bottom: -100px;
+        opacity: 0;
+    }
+    100% {
+        bottom: 0px;
+        opacity: 1;
+    }
+}
+*/
 
 .questions {
     overflow: scroll;
