--- a/css/main.css
+++ b/css/main.css
@@ -40,12 +40,15 @@ body {
 /* DATE DISPLAY */
 
 .dateDisplay {
-    position: absolute;
+/*    position: absolute;*/
+/*
     right: 98px;
     top 20px;
     z-index: 3;
+*/
 /*    align-self: center;*/
-    width: 20%;
+    padding-left: 10px;
+    width: 50%;
     display: grid;
     grid-template-columns: repeat(4,1fr);
     grid-gap: 5px;
