--- a/css/main.css
+++ b/css/main.css
@@ -40,15 +40,18 @@ body {
 /* DATE DISPLAY */
 
 .dateDisplay {
-/*    position: absolute;*/
+/*    opacity: 0;*/
 /*
-    right: 98px;
+    position: absolute;
+    right: 35px;
     top 20px;
-    z-index: 3;
 */
-/*    align-self: center;*/
-    padding-left: 10px;
-    width: 50%;
+    margin-top: 10px;
+    z-index: 2;
+    align-self: center;
+/*    padding-left: 10px;*/
+    width: 95%;
+/*    background: red;*/
     display: grid;
     grid-template-columns: repeat(4,1fr);
     grid-gap: 5px;
@@ -61,16 +64,16 @@ body {
     box-shadow: 0 0 5px #333;
     text-shadow: 0 0 5px #222;
     font-family: Patua One;
-    font-size: 14px;
+    font-size: 12px;
 /*    color: var(--secondary-color);*/
     color: var(--secondary-color);
     padding: 5px;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-top: 20px;
-    width: 70px;
-    height: 70px;
+/*    margin-top: 15px;*/
+    width: 60px;
+    height: 60px;
     text-align: center;
     border: 2px var(--secondary-color) solid;
     border-radius: 50%;
@@ -102,6 +105,15 @@ body {
     color: var(--secondary-color);
     transition: all .2s ease-in;
 }
+
+#home {
+    color: var(--secondary-color);
+}
+
+#home:hover {
+    color: #fff;
+}
+
 
 /* MENU OVERLAY */
 .menu {
@@ -213,6 +225,7 @@ main:after {
 */
 
 .lg-heading {
+    color: #000;
     font-family: Playball;
     font-size: 100px;
     font-weight: 100;
@@ -224,6 +237,7 @@ main:after {
 }
 
 .sm-heading {
+    color: #000;
     padding-left: 10px;
     font-family: Playball;
     font-size: 18px;
