--- a/css/faq.css
+++ b/css/faq.css
@@ -49,7 +49,7 @@ body {
     height: 85vh;
     width: 45vw;
     background: #fff;
-    border-top: 8px var(--secondary-color) solid;
+    border-top: 8px #bda659 solid;
     border-top-right-radius: 7px;
     border-top-left-radius: 7px;
     box-shadow: 0 0 5px #555;
