--- a/css/countdown.css
+++ b/css/countdown.css
@@ -21,6 +21,18 @@ body {
     background-size: cover;
 }
 
+.fireflyEffect {
+    position: absolute;
+    top: 0;
+    opacity: 0.7;
+    height: 100vh;
+    width: 100vw;
+    background-image: url(../img/fireflies.png);
+    background-size: cover;
+    z-index: 1;
+}
+
+
 .countdownContainer {
     height: 100vh;
     display: flex;
