--- a/css/main.css
+++ b/css/main.css
@@ -63,11 +63,11 @@ body {
     transition: all .2s ease-in;
 }
 
-#home {
+#activePage {
     color: var(--secondary-color);
 }
 
-#home:hover {
+#activePage:hover {
     color: #fff;
 }
 
