--- a/css/photos.css
+++ b/css/photos.css
@@ -23,7 +23,7 @@
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
     z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
+    /* padding-top: 100px; Location of the box */
     left: 0;
     top: 0;
     width: 100%; /* Full width */
@@ -31,6 +31,9 @@
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 /* Modal Content (image) */
@@ -41,8 +44,9 @@
     min-width: 80vw;
     max-width: 100vw;
 */
-    min-height: 80vh;
+    /* min-height: 80vh; */
     max-height: 80vh;
+    max-width: 80vw;
 }
 
 /* Caption of Modal Image */
@@ -82,7 +86,7 @@
     position: absolute;
     top: 15px;
     right: 35px;
-    color: #f1f1f1;
+    color: var(--secondary-color);
     font-size: 40px;
     font-weight: bold;
     transition: 0.3s;
@@ -99,7 +103,8 @@
     position: absolute;
     top: 50vh;
     right:50px;
-    color: #fff;
+    color: var(--secondary-color);
+    transform: translateY(-50%);
 }
 
 #nextImg:hover {
@@ -111,7 +116,8 @@
     position: absolute;
     top: 50vh;
     left:50px;
-    color: #fff;
+    color: var(--secondary-color);
+    transform: translateY(-50%);
 }
 
 #prevImg:hover {
@@ -146,14 +152,25 @@
     }
 }
 
-@media (max-width: 650px){
+@media (max-width: 800px){
+    body {
+        background: rgba(170,139,91,.2);
+    }
+
     .modal-content {
-        width: 100%;
+        max-width: 70vw;;
     }
     
     .portfolio {
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: repeat(11,180px);
+        grid-template-columns: 1fr;
+    }
+
+    #nextImg {
+        right: 10px;
+    }
+
+    #prevImg {
+        left: 10px;
     }
 }
 
@@ -161,7 +178,7 @@
     .portfolio {
         grid-template-columns: 1fr;
         grid-template-rows: repeat(21,180px);
-        padding: 10px 50px;
+        padding: 80px 40px 50px 40px;
         background: var(--background);
     }
 }
