--- a/css/countdown.css
+++ b/css/countdown.css
@@ -107,7 +107,7 @@ h4 {
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        padding: 40px 0;
+        padding: 40px 20px;
         box-sizing: border-box;
         overflow: hidden;
     }
