--- a/css/countdown.css
+++ b/css/countdown.css
@@ -56,6 +56,8 @@ body {
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+    box-sizing: border-box;
+    overflow: hidden;
 }
 
 h1 {
@@ -107,9 +109,8 @@ h4 {
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        padding: 40px 20px;
-        box-sizing: border-box;
-        overflow: hidden;
+        box-sizing: border-box !important;
+        overflow: hidden !important;
     }
 
     h1 {
@@ -124,6 +125,6 @@ h4 {
         font-size: 30px;
         margin-top: 0;
         height: auto;
-        padding: 15px;
+        padding: 10px;
     }
 }
