--- a/css/main.css
+++ b/css/main.css
@@ -186,7 +186,6 @@ main:after {
 
 #home {
     overflow: hidden;
-    
 }
 
 .text {
@@ -255,8 +254,12 @@ footer {
     }
 
     .sm-heading {
-        font-size: 14px;
+        font-size: 16px;
         margin-top: 12px;
+        position: fixed;
+        bottom: 5%;
+        left: 40%;
+        color: var(--secondary-color);
     }
 
     .menu, .menu-items {
